--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 
-description: Foursite.me
+description: Quantify Placemaking
 
 # twitter: 
 # medium: 
